# parsee-pdf-reader

./: README.md  pyproject.toml
pdf_reader/: __init__.py  converter.py  custom_dataclasses.py  displayer.py  extract.py  helper.py  pdf_page.py  visualisation.py
tests/: integration_tests.py
